<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#e0e0e0"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context="strathmore.edu.events.LoginActivity">

    <ImageView
        android:layout_width="65dp"
        android:layout_height="68dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:scaleType="fitXY"
        android:scaleX="2"
        android:scaleY="2"
        android:src="@drawable/strath"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:background="@drawable/customer_edit_text_bg"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:paddingTop="10dp"/>

    <EditText
        android:id ="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:paddingTop="10dp"
        android:background="@drawable/customer_edit_text_bg"
        android:hint="@string/hint_password"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/btn_login"
        android:background="#2a65b0"/>
    
    <Button
        android:id="@+id/btn_forgot_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:text="@string/btn_forgot_password"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"/>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:text="@string/btn_link_to_register"
        android:textAllCaps="false"
        android:textSize="15dp"
        tools:ignore="SpUsage"/>


</LinearLayout>